--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Rebuilted CM7 in 3G VM_SPLIT way used for MIUI porting for Arc
+[Arc LT15i & Arc S Lt18i]Rebuilted CM7 in 3G VM_SPLIT way used for MIUI porting for Arc
